// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row should render NoResult properly 1`] = `
.c0 {
  display: grid;
  position: relative;
  grid-template-rows: minmax(30px,auto);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px solid #ededed;
  cursor: default;
  text-align: center;
  line-height: 30px;
}

.c0 > * {
  background-color: #ffffff;
}

<div>
  <li
    class="c0"
  >
    Dummy
  </li>
</div>
`;

exports[`Row should render row properly 1`] = `
.c0 {
  display: grid;
  position: relative;
  grid-template-rows: minmax(30px,auto);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px solid #ededed;
  cursor: default;
}

.c0 > * {
  background-color: #ffffff;
}

<div>
  <li
    class="c0"
  >
    Dummy
  </li>
</div>
`;
